# hangrier_games

./: .dockerignore  .env  .env.example  .gitignore  .indxr-ollama-qwen.sh  .indxr-ollama.sh  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  GAME_REVIEW.md  INDEX.md  README.md  TASKS_8-12_SUMMARY.md  TASK_12_FRONTEND_NOTES.md  TASK_7_IMPLEMENTATION.md  VALIDATION_SUMMARY.md  _fix.sh  api.Dockerfile  codemap.md  docker-compose.yaml  frontend.Dockerfile  justfile  pr_body.md  rustfmt.toml
announcers/: Cargo.toml  codemap.md  plan.md
announcers/examples/: sample-prompt.rs
announcers/src/: Modelfile  Modelfile.qwen  announcers.json  broadcast.rs  codemap.md  history.rs  lib.rs  main.rs  severity.rs  types.rs
announcers/src/llm/: cloudflare.rs  mod.rs  ollama.rs
announcers/tests/: integration.rs
api/: Cargo.toml  build.rs  codemap.md
api/assets/: package-lock.json  package.json
api/assets/src/: main.css
api/src/: auth.rs  cleanup.rs  codemap.md  cookies.rs  email.rs  games.rs  lib.rs  logging.rs  main.rs  messages.rs  sse.rs  storage.rs  tributes.rs  users.rs  websocket.rs
api/src/games/: handlers.rs  items.rs  mod.rs  persist.rs
api/src/routes/: auth.rs  dev.rs  games.rs  mod.rs
api/src/templates/: auth.rs  filters.rs  game_detail.rs  mod.rs  pages.rs  tera_engine.rs  timeline.rs  tribute_detail.rs
api/src/templates/timeline/: cards.rs  mod.rs
api/templates/: account.html  account_settings.html  areas.html  auth.html  base.html  check_email.html  create_game.html  email_verified.html  error.html  game_detail.html  games_list.html  home.html  log.html  not_found.html  reset_form.html  timeline.html  tribute_detail.html  tributes.html
api/tests/: IMPLEMENTATION_SUMMARY.md  README.md  WEBSOCKET_TESTING.md  auth_tests.rs  commentary_tests.rs  event_persistence_tests.rs  game_customization_test.rs  games_tests.rs  simulation_tests.rs  tributes_tests.rs  websocket_tests.rs
api/tests/common/: mod.rs
fullstack/: Cargo.toml  Dioxus.toml
fullstack/src/: main.rs
game/: Cargo.toml  codemap.md
game/benches/: game_cycle_bench.rs
game/proptest-regressions/tributes/afflictions/: integration_tests.txt
game/src/: animals.rs  codemap.md  config.rs  database.rs  districts.rs  events.rs  games.rs  globals.rs  lib.rs  logging.rs  messages.rs  operations.rs  output.rs  pathfinding.rs
game/src/areas/: areas.rs  codemap.md  events.rs  forage.rs  hex.rs  mod.rs  path.rs  shelter.rs  water.rs  weather.rs
game/src/events/: display.rs  mod.rs  types.rs
game/src/games/: alliances.rs  cycle.rs  cycle_helpers.rs  messages.rs  mod.rs  sponsors.rs  tests.rs
game/src/games/tests/: alliances.rs  messaging.rs  mod.rs  survival.rs
game/src/items/: codemap.md  generation.rs  items.rs  mod.rs  name_generator.rs  tests.rs
game/src/phases/: environment.rs  mod.rs
game/src/sponsors/: mod.rs
game/src/terrain/: assignment.rs  config.rs  descriptors.rs  mod.rs  types.rs
game/src/threats/: animals.rs  codemap.md  mod.rs
game/src/tributes/: actions.rs  alliances.rs  brains.rs  codemap.md  combat.rs  combat_beat.rs  combat_tuning.rs  events.rs  helpers.rs  incidents.rs  inventory.rs  lifecycle.rs  mod.rs  movement.rs  rescue.rs  stamina_band.rs  statuses.rs  survival.rs  tests.rs  traits.rs  traps.rs  tributes.rs  wounds.rs
game/src/tributes/afflictions/: addiction.rs  addiction_tests.rs  anatomy.rs  anatomy_tests.rs  cascade.rs  cure.rs  effects.rs  fixation.rs  integration_tests.rs  mod.rs  snapshot_tests.rs  trapped.rs  trauma.rs  trauma_producers.rs  trauma_snapshot_tests.rs  trauma_tests.rs  tuning.rs
game/src/tributes/brains/: addiction_override.rs  affliction_override.rs  decisions.rs  mod.rs  scoring.rs  (+4 more)
game/src/witty_phrase_generator/: codemap.md  mod.rs
game/tests/: afflictions_storage_test.rs  ai_terrain_behavior_test.rs  district_affinity_test.rs  event_game_loop_test.rs  event_integration_test.rs  event_severity_test.rs  event_unification_area_events_test.rs  event_unification_combat_test.rs  event_unification_movement_test.rs  item_distribution_test.rs  narrative_test.rs  sponsor_affinity_snapshot.rs  stamina_combat_integration.rs  stamina_edge_cases_test.rs  survival_integration.rs  terrain_assignment_test.rs  terrain_compatibility_test.rs  terrain_config_test.rs  terrain_specific_events_test.rs  trapped_afflictions_pr2_test.rs  trauma_acquisition_test.rs
game/tests/snapshots/: sponsor_affinity_snapshot__three_cycle_affinity.snap  sponsor_affinity_snapshot__three_cycle_affinity.snap.new
shared/: Cargo.toml  codemap.md
shared/src/: afflictions.rs  audience.rs  codemap.md  combat_beat.rs  conditions.rs  ids.rs  lib.rs  messages.rs  sponsors.rs  wounds.rs
shared/src/afflictions/: addiction.rs  affliction.rs  fixation.rs  kind.rs  mechanics.rs  mod.rs  phobia.rs  severity.rs  source.rs  trapped.rs  trauma.rs
shared/src/messages/: impls.rs  mod.rs  survival_event_tests.rs  tests.rs
web/: Cargo.toml  Dioxus.toml  build.rs  codemap.md  nginx.conf  tailwind.config.js
web/assets/: package-lock.json  package.json  rpg-awesome.min.css
web/assets/src/: main.css
web/src/: api_url.rs  auth.rs  cache.rs  codemap.md  http.rs  icons.rs  lib.rs  main.rs  routes.rs  storage.rs  theme.rs
web/src/components/: accounts.rs  app.rs  area_detail.rs  button.rs  codemap.md  create_game.rs  create_tribute.rs  credits.rs  filter_chips.rs  full_game_log.rs  game_areas.rs  game_day_log.rs  game_day_summary.rs  game_delete.rs  game_detail.rs  game_edit.rs  game_log_stub.rs  game_period_page.rs  game_tributes.rs  games.rs  games_list.rs  home.rs  icons_page.rs  info_detail.rs  input.rs  item_detail.rs  item_icon.rs  loading_modal.rs  map.rs  map_affordance_overlay.rs  mod.rs  modal.rs  navbar.rs  period_card.rs  period_grid.rs  period_grid_empty.rs  period_timeline.rs  recap_card.rs  server_version.rs  tribute_delete.rs  (+6 more)
web/src/hooks/: mod.rs  use_game_websocket.rs  use_timeline_summary.rs
web/tests/: button_test.rs  icon_codegen_smoke.rs  info_detail_test.rs  item_icon_test.rs  loading_modal_test.rs  map_test.rs  mod.rs  modal_test.rs  tribute_status_icon_test.rs
(+276 files in other folders)
