[package]
name = "announcers"
version = "0.2.0"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
ollama-rs = { version = "0.3.4", features = ["stream"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared = { path = "../shared" }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "rt"] }
uuid = { version = "1", features = ["v4"] }

[features]
ollama = ["dep:ollama-rs"]
