[package]
name = "api"
version = "0.1.15"
edition = "2024"

[dependencies]
announcers = { path = "../announcers" }
async-trait = "0.1"
axum = { version = "0.8.4", features = ["macros", "multipart", "ws"] }
base64-url = "3.0.0"
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
game = { path = "../game" }
jsonwebtoken = "9.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shared = { path = "../shared" }
strum = { version = "0.27.1", features = ["derive"] }
surrealdb = "2.3.2"
surrealdb-migrations = "2.2.2"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tokio-cron-scheduler = "0.13.0"
tower-http = { version = "0.6.4", features = ["trace", "cors", "fs"] }
tower = { version = "0.5.2", features = ["util", "timeout"] }
tower_governor = "0.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
uuid = { version = "1.16.0", features = ["v4"] }
time = { version = "0.3.41", features = ["serde", "macros"] }
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
axum-test = "20.0.0"
tokio-tungstenite = "0.26"

[target.'cfg(windows)'.dependencies]
surrealdb = { version = "2.2.1", features = ["kv-mem"] }

[target.'cfg(unix)'.dependencies]
surrealdb = { version = "2.2.1", features = ["kv-surrealkv"] }
