[package]
name = "api"
version = "0.1.15"
edition = "2024"

[dependencies]
announcers = { path = "../announcers" }
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["macros", "multipart", "ws"] }
base64-url = "3.0.3"
chrono = { version = "0.4.44", features = ["serde"] }
futures = "0.3.32"
game = { path = "../game" }
jsonwebtoken = { version = "10.0", default-features = false, features = ["aws_lc_rs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shared = { path = "../shared" }
strum = { version = "0.28", features = ["derive"] }
surrealdb = "2.3.2"
surrealdb-migrations = "2.2.2"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tokio-cron-scheduler = "0.13.0"
tower-http = { version = "0.6.8", features = ["trace", "cors", "fs", "normalize-path"] }
tower = { version = "0.5.3", features = ["util", "timeout"] }
tower_governor = "0.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
uuid = { version = "1.23.1", features = ["v4"] }
time = { version = "0.3.47", features = ["serde", "macros"] }
validator = { version = "0.20", features = ["derive"] }

[dev-dependencies]
axum-test = "20.0.0"
tokio-tungstenite = "0.26"
surrealdb = { version = "2.3.2", features = ["kv-mem"] }

[target.'cfg(windows)'.dependencies]
surrealdb = { version = "2.3.2", features = ["kv-mem"] }

[target.'cfg(unix)'.dependencies]
surrealdb = { version = "2.3.2", features = ["kv-surrealkv"] }
