[package]
name = "fullstack"
version = "0.1.0"
authors = ["Kenneth Love <11908+kennethlove@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.1", features = ["router", "fullstack"] }
dioxus-logger = "0.6.1"
dioxus-query = "0.6.0"
dotenvy = "0.15.7"
game = { path = "../game" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
surrealdb = "2.1.4"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
