[package]
name = "game"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
fake = "5"
indefinite = "0.1.11"
once_cell = "1.21.4"
rand = "0.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shared = { path = "../shared" }
strum = { version = "0.28", features = ["derive"] }
strum_macros = "0.28"
thiserror = "2.0.18"
tracing = "0.1.44"
uuid = { version = "1.23.1", features = ["v4", "js", "serde"] }

[dev-dependencies]
criterion = "0.8"
rstest = "0.26"
tokio = { version = "1.52.1", features = ["macros", "rt"] }

[[bench]]
name = "game_cycle_bench"
harness = false
