[package]
name = "shared"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
validator = { version = "0.18", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4"] }
