[package]
name = "shared"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
validator = { version = "0.20", features = ["derive"] }
uuid = { version = "1.23.1", features = ["v4"] }
