[package]
name = "web"
version = "0.1.19"
edition = "2024"

[dependencies]
chrono = "0.4.41"
dioxus = { version = "0.6.3", features = ["web", "router"] }
dioxus-logger = "0.6.2"
dioxus-query = "0.7.0"
game = { path = "../game" }
gloo-storage = "0.3.0"
jwt-rustcrypto = "0.2.1"
serde = { version = "1.0.216", features = ["derive"] }
shared = { path = "../shared" }
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.140"

[build-dependencies]
dotenvy = "0.15.7"

[features]
default = ["web"]
web = ["dioxus/web"]

[dependencies.getrandom]
features = ["wasm_js"]
version = "0.3"
