[package]
name = "web"
version = "0.1.19"
edition = "2024"

[dependencies]
chrono = "0.4.44"
dioxus = { version = "0.7.0", features = ["web", "router"] }
dioxus-query = "0.9.2"
futures-util = { version = "0.3.32", features = ["sink"] }
game = { path = "../game" }
gloo-net = "0.7"
gloo-storage = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
shared = { path = "../shared" }
reqwest = { version = "0.13", features = ["json", "multipart"] }
serde_json = "1.0.149"
tracing = "0.1.44"
uuid = { version = "1.23.1", features = ["v4", "js", "serde"] }
validator = { version = "0.20", features = ["derive"] }
web-sys = { version = "0.3.97", features = ["console"] }

[build-dependencies]
dotenvy = "0.15.7"

[features]
default = ["web"]
web = ["dioxus/web"]

[dependencies.getrandom]
features = ["wasm_js"]
version = "0.4"
